--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Putbotz",
+  "name": "Alphabot",
   "version": "0.14.1",
   "description": "What'sApp Bot By Putbotz",
   "zeeone": "zeeone.js",
